tests/lean/302.lean.expected.out
302.lean:1:8-1:11: error: function expected at
  m
term has type
  ?m
302.lean:1:19-1:22: error: unknown free variable '_uniq.95'
